# pathway-chatbot

./: .gitignore  GC_IMPLEMENTATION.md  issues.md  package-lock.json  pr.md
backend/: .env.example  .gitignore  DEPLOYMENT_READY.md  Dockerfile  GUNICORN_IMPLEMENTATION.md  README.md  assoc.ipynb  gunicorn.conf.py  ia_evaluation.ipynb  main.py  output_data.csv  pyproject.toml  test_index.ipynb  test_tools.py
backend/app/: config.py  http_client.py  langfuse.py  memory_diagnostics.py  memory_trim.py  monitoring.py  scheduler.py  settings.py
backend/app/api/: monitoring_helpers.py
backend/app/api/routers/: chat.py  models.py  vercel_response.py
backend/app/engine/: __init__.py  custom_condense_plus_context.py  custom_node_with_score.py  generate.py  query_filter.py
backend/app/engine/loaders/: file.py
backend/app/middleware/: monitoring_middleware.py
backend/app/notebooks/: monitoring_langfuse.ipynb  split_text.ipynb  splitter.ipynb
backend/app/notebooks/data1/: -Admission-Requirements.md
backend/app/security/: __init__.py  input_validator.py
backend/app/utils/: geo_ip.py  localization.py
backend/data/markdown/: -Admission-Requirements.md  -After-PathwayConnect.md  -Answers-to-Your-Questions-about-Ecclesiastical-Endorsement.md  -Application-Process.md  -Assistance-for-Students-with-Disabilities.md  -BYU-Idaho-Course-Exceptions.md  -BYU-Pathway-Worldwide-Website.md  -Common-Misconceptions-about-Choosing-Certificates.md  -Communication-Resources.md  -Confidentiality-of-Student-Records.md  -Course-Auditing.md  -Course-Registration-Process.md  -Course-Retakes-and-Returning-Students.md  -Courses--Sequences.md  -Credits--Courses.md  -Email.md  -English-Placement-Assessment.md  -Facilitating-the-Gathering.md  -Gathering-Calendar.md  -Gathering-Location.md  -Gathering-Schedule.md  -Gathering-Standards.md  -Gatherings.md  -Grading-System--GPA.md  -Honor-Code.md  -Institutes-of-Religion--PEF-Self-Reliance-Centers.md  -Leadership-and-Roles.md  -Local-Adaption.md  -Local-Options.md  -Marketing-Materials.md  -Non-Participating-Students.md  -Online-Certificates-and-Degrees.md  -Other-Policies--Procedures.md  -PATH.md  -Pathway-Certificates.md  -PathwayConnect-Groups.md  -PathwayConnect-Sites.md  -Procedures-for-Handling-Misconduct.md  -Program-Objectives.md  -Program-Structure--Requirements.md  (+449 more)
backend/docs/: API.md  README.md  Setup.md
backend/tests/: test_security_integration.py  test_security_validation.py
docs/: Architecture.md  README.md
frontend/: .env.example  Dockerfile  next.config.json  package-lock.json  package.json  tailwind.config.ts
roleplay-content/: README.md  (+1 more)
(+41 files in other folders)
